--- a/giphy.css
+++ b/giphy.css
@@ -1,6 +1,9 @@
+body{
+    background-image: url(subtle_surface.png);
+}
 #gifs{
 width: 200px;
-background-image: url(pixel_weave_@2X.png);
+
 }
 .gif{
    text-align: center;
